Sat Aug 11 23:08:01 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* object.c (rb_obj_inspect): merge from 1.7: remove useless space.

Tue Aug  7 09:12:55 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* win32/win32.h: fix problems with BC++ (ruby-bugs#PR161).

Mon Aug  6 17:01:33 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_mark_end_proc): should mark ruby_cref, maybe should
	  not be here, but it's simplest way for a kludge.

Mon Aug  6 00:35:03 2001  Guy Decoux  <decoux@moulon.inra.fr>

	* struct.c (rb_struct_modify): should check frozen and taint
	  status.

Sun Aug  5 07:46:18 2001  Nobuyoshi Nakada <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_undefined): do not recurse if method_missing is
	  undefined.

Wed Aug  1 20:45:14 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* win32/Makefile.sub: changed path separator of $LIB to '\'.

Tue Jul 31 12:55:35 2001  Nobuyoshi.Nakada <nobu.nokada@softhome.net>  <nobu.nakada@nifty.ne.jp>

	* file.c (rb_file_s_expand_path): expanded path should not end
	  with "/.".
	  removed meaningless code.

Tue Jul 31 11:52:10 2001  akira yamada  <akira@ruby-lang.org>

	* marshal.c (marshal_load): ruby_verbose test should be wrapped by
	  RTEST().

Mon Jul 30 17:54:23 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_index): should return nil (not the default
	  value) if value is not in the hash.

Mon Jul 30 03:19:53 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_cstr2inum): "0 ff".hex should return 0, not 255.

Fri Jul 27 18:07:27 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_provided): extension should be guessed using
	  rb_find_file_noext().

	* eval.c (rb_f_require): should call rb_feature_p() after
	  extension completion.

Fri Jul 27 16:25:52 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): add CHECK_INTS before next, redo, retry to
	  avoid potential uninterruptable infinite loop.
